--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,13 @@ cookbooks/python/openai/data/hotel_invoices/transformed_invoice_json/*
 cookbooks/python/openai/data/hotel_invoices/extracted_invoice_json/*
 cookbooks/python/openai/data/hotel_invoices/hotel_DB.db
 cookbooks/python/openai/hallucination_results.csv
-node_modules/
+*node_modules/
+*__pycache__/
+*__pycache__/*
+*venv/
+*venv/*
+venv/
+.venv/
+*/venv/
+*/.venv/
+**/venv/
