--- a/visiobot-project/visiobot-backend/requirements.txt
+++ b/visiobot-project/visiobot-backend/requirements.txt
@@ -1,66 +1,181 @@
 absl-py==2.1.0
+aniso8601==10.0.0
 annotated-types==0.7.0
 anyio==4.8.0
+argcomplete==3.5.3
+asttokens==3.0.0
 astunparse==1.6.3
+attrs==24.3.0
+azure-ai-evaluation==1.1.0
+azure-ai-inference==1.0.0b7
+azure-core==1.32.0
+azure-identity==1.19.0
+azure-monitor-opentelemetry-exporter==1.0.0b33
+azure-storage-blob==12.24.1
 blinker==1.9.0
-certifi==2025.1.31
+cachelib==0.13.0
+certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+click-plugins==1.1.1
+cligj==0.7.2
+cloudpickle==3.1.1
+colorama==0.4.6
+comm==0.2.2
 contourpy==1.3.1
+cryptography==44.0.0
 cycler==0.12.1
+debugpy==1.8.12
+decorator==5.1.1
+Deprecated==1.2.15
 distro==1.9.0
+docstring_parser==0.16
+executing==2.2.0
+fastapi==0.115.7
+filelock==3.17.0
+filetype==1.2.0
+fiona==1.10.1
+fixedint==0.1.6
 Flask==3.1.0
 flask-cors==5.0.1
+flask-restx==1.3.0
+Flask-Session==0.8.0
 flatbuffers==25.2.10
 fonttools==4.56.0
 gast==0.6.0
+geopandas==1.0.1
+gitdb==4.0.12
+GitPython==3.1.44
 google-pasta==0.2.0
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
 grpcio==1.70.0
 h11==0.14.0
 h5py==3.13.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.5.2
+ipykernel==6.29.5
+ipython==8.31.0
+isodate==0.7.2
 itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jedi==0.19.2
+jeepney==0.8.0
 Jinja2==3.1.5
 jiter==0.8.2
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 keras==3.8.0
+keyring==24.3.1
 kiwisolver==1.4.8
 libclang==18.1.1
+llvmlite==0.44.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.25.1
 matplotlib==3.10.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mistralai==0.4.2
 ml-dtypes==0.4.1
+more-itertools==10.6.0
+msal==1.31.1
+msal-extensions==1.2.0
+msgspec==0.19.0
+msrest==0.7.1
 namex==0.0.8
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numba==0.61.0
 numpy==2.0.2
-openai==1.64.0
+oauthlib==3.2.2
+openai==1.63.2
+opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp-proto-common==1.29.0
+opentelemetry-exporter-otlp-proto-http==1.29.0
+opentelemetry-proto==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
 opt_einsum==3.4.0
 optree==0.14.0
+orjson==3.10.15
 packaging==24.2
 pandas==2.2.3
-pillow==11.1.0
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.3.6
+portalocker==2.10.1
+prompt_toolkit==3.0.50
+promptflow-core==1.17.1
+promptflow-devkit==1.17.1
+promptflow-tracing==1.17.1
 protobuf==5.29.3
-pydantic==2.10.6
+psutil==5.9.8
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.22
+pydantic==2.10.5
 pydantic_core==2.27.2
+pydash==7.0.7
 Pygments==2.19.1
+PyJWT==2.10.1
+pyogrio==0.10.0
 pyparsing==3.2.1
+pyproj==3.7.1
 python-dateutil==2.9.0.post0
-pytz==2025.1
+python-dotenv==1.0.1
+pytz==2024.2
+pyzmq==26.2.0
+referencing==0.36.1
+regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.9.4
+rpds-py==0.22.3
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+scikit-learn==1.6.1
+scipy==1.15.2
 seaborn==0.13.2
+SecretStorage==3.3.3
+shap==0.47.0
+shapely==2.0.7
 six==1.17.0
+slicer==0.0.8
+smmap==5.0.2
 sniffio==1.3.1
+SQLAlchemy==2.0.37
+squarify==0.4.4
+stack-data==0.6.3
+starlette==0.45.2
+strictyaml==1.7.3
+tabulate==0.9.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
+ucimlrepo==0.0.7
 urllib3==2.3.0
+waitress==3.0.2
+wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.17.2
+zipp==3.21.0
